# Ball_CV

./: .gitignore  CMakeLists.txt  MVP.md  README.md  best_practices.md  claude.md  todo.md  tradeoffs.md
.claude/: claude.md
data/csv_out/: after_kf.csv  before_kf.csv
docs/: MVP.md  best_practices.md  kf_filter_notes.md
include/: back_sub.hpp  data_val_f.hpp  h_transform.hpp  kf_2D.hpp  kf_2d.hpp  met_calc.hpp  preproc.hpp  radar.hpp  val.hpp  video_ex.hpp
include/config/: hardware_config.hpp  tuning_params.hpp
include/constants/: io_consts.hpp  physics_consts.hpp
include/types/: ball_state.hpp  image_state.hpp
new_src/: main.cpp  met_calc.cpp  video_ex.cpp
src/: back_sub.cpp  data_val_f.cpp  h_transform.cpp  ini_proc.cpp  ini_proc.hpp  kf_2D.cpp  kf_2d.cpp  main.cpp  met_calc.cpp  preproc.cpp  radar.cpp  val.cpp  video_ex.cpp
src/back_sub/: back_sub.cpp  back_sub.hpp
src/ball_det/back_sub/: back_sub.cpp  back_sub.hpp
src/ball_det/h_transform/: h_transform.cpp  h_transform.hpp
src/ball_det/preproc/: preproc.cpp  preproc.hpp
src/data_val_f/: data_val_f.cpp  data_val_f.hpp  kf_2D.cpp
src/helpers/: ball_state.hpp  constants.hpp  hardware_config.hpp  image_state.hpp  physics_consts.hpp  tuning_params.hpp
src/met_calc/: met_calc.cpp  met_calc.hpp
src/val/: val.cpp  val.hpp
